# app/Models/Product.php
@@ -16,4 +16,9 @@ class Product extends Model
         return $this->belongsTo(User::class);
     }
 
+    public function orders()
+    {
+        return $this->belongsToMany(Order::class, 'order_product')->withPivot('quantity', 'price');
+    }
+
 }
