# routes/api.php
@@ -19,3 +19,4 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 });
 
 Route::apiResource('v1/products', App\Http\Controllers\Api\V1\ProductController::class);
+Route::apiResource('v1/orders', App\Http\Controllers\Api\V1\OrderController::class);
